--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,15 +7,16 @@
         android:icon="@drawable/launcher_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
             android:name=".Menu"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".Overview"
             android:label="@string/title_activity_overview" >
@@ -24,6 +25,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="emmajanefearn.financingapplication.Menu" />
         </activity>
+
         <activity
             android:name=".LogExpenditure"
             android:label="@string/title_activity_log_expenditure"
@@ -32,6 +34,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="emmajanefearn.financingapplication.Menu" />
         </activity>
+
         <activity
             android:name=".Income"
             android:label="@string/title_activity_income"
@@ -40,14 +43,17 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="emmajanefearn.financingapplication.Menu" />
         </activity>
+
         <activity
             android:name=".Settings"
             android:label="@string/title_activity_settings"
             android:parentActivityName=".Menu" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="emmajanefearn.financingapplication.Menu" />
+                android:value="emmajanefearn.financingapplication.Menu"
+                />
         </activity>
+
         <activity
             android:name=".Outgoings"
             android:label="@string/title_activity_outgoings"
@@ -56,6 +62,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="emmajanefearn.financingapplication.Menu" />
         </activity>
+
         <activity
             android:name=".Recommendations"
             android:label="@string/title_activity_recommendations"
@@ -64,6 +71,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="emmajanefearn.financingapplication.Menu" />
         </activity>
+
     </application>
 
 </manifest>
